[gd_scene load_steps=68 format=3 uid="uid://drggel0pthm3r"]

[ext_resource type="Script" path="res://Scripts/Skills/robort_tornado_area.gd" id="1_qbtbr"]
[ext_resource type="Texture2D" uid="uid://cwvtr618kceo" path="res://Assets/Images/Effects/RobortSkill/Tornado/0001.png" id="2_vwta4"]
[ext_resource type="Texture2D" uid="uid://bv1ey38tik5is" path="res://Assets/Images/Effects/RobortSkill/Tornado/0002.png" id="3_o2vda"]
[ext_resource type="Texture2D" uid="uid://d16jmljxpt2m5" path="res://Assets/Images/Effects/RobortSkill/Tornado/0003.png" id="4_locg5"]
[ext_resource type="Texture2D" uid="uid://cdpwdwndl2ocd" path="res://Assets/Images/Effects/RobortSkill/Tornado/0004.png" id="5_2v87n"]
[ext_resource type="Texture2D" uid="uid://c7wyqxgqd5yh3" path="res://Assets/Images/Effects/RobortSkill/Tornado/0005.png" id="6_v7bci"]
[ext_resource type="Texture2D" uid="uid://dufppt103dr3r" path="res://Assets/Images/Effects/RobortSkill/Tornado/0006.png" id="7_3dpce"]
[ext_resource type="Texture2D" uid="uid://b2c7nmifegmyt" path="res://Assets/Images/Effects/RobortSkill/Tornado/0007.png" id="8_lc1tx"]
[ext_resource type="Texture2D" uid="uid://bdeqphplksubk" path="res://Assets/Images/Effects/RobortSkill/Tornado/0008.png" id="9_wslrt"]
[ext_resource type="Texture2D" uid="uid://dyplslc5cdrox" path="res://Assets/Images/Effects/RobortSkill/Tornado/0009.png" id="10_ajlnv"]
[ext_resource type="Texture2D" uid="uid://dbvsvjriakxad" path="res://Assets/Images/Effects/RobortSkill/Tornado/0010.png" id="11_u2lkh"]
[ext_resource type="Texture2D" uid="uid://bqw68b2c5ljwt" path="res://Assets/Images/Effects/RobortSkill/Tornado/0011.png" id="12_yfnum"]
[ext_resource type="Texture2D" uid="uid://ldu7afnlhpif" path="res://Assets/Images/Effects/RobortSkill/Tornado/0012.png" id="13_7wxit"]
[ext_resource type="Texture2D" uid="uid://bt0oyfretvq04" path="res://Assets/Images/Effects/RobortSkill/Tornado/0013.png" id="14_x6byj"]
[ext_resource type="Texture2D" uid="uid://bmo343mf6rvdg" path="res://Assets/Images/Effects/RobortSkill/Tornado/0014.png" id="15_1y2xs"]
[ext_resource type="Texture2D" uid="uid://bavltsn302ok2" path="res://Assets/Images/Effects/RobortSkill/Tornado/0015.png" id="16_yvx28"]
[ext_resource type="Texture2D" uid="uid://brhpd8fj5bd5k" path="res://Assets/Images/Effects/RobortSkill/Tornado/0016.png" id="17_oy4pr"]
[ext_resource type="Texture2D" uid="uid://do5vcscbox0w2" path="res://Assets/Images/Effects/RobortSkill/Tornado/0017.png" id="18_msjbd"]
[ext_resource type="Texture2D" uid="uid://dopgw5kbqrc" path="res://Assets/Images/Effects/RobortSkill/Tornado/0018.png" id="19_8q1r8"]
[ext_resource type="Texture2D" uid="uid://cjwo84qu2g12f" path="res://Assets/Images/Effects/RobortSkill/Tornado/0019.png" id="20_2xd4f"]
[ext_resource type="Texture2D" uid="uid://coh3ru6kt6qir" path="res://Assets/Images/Effects/RobortSkill/Tornado/0020.png" id="21_hpygb"]
[ext_resource type="Texture2D" uid="uid://b02r74wovg8tl" path="res://Assets/Images/Effects/RobortSkill/Tornado/0021.png" id="22_8xciy"]
[ext_resource type="Texture2D" uid="uid://cv67kslvobni" path="res://Assets/Images/Effects/RobortSkill/Tornado/0022.png" id="23_2tnfj"]
[ext_resource type="Texture2D" uid="uid://cjosyxugdkk6e" path="res://Assets/Images/Effects/RobortSkill/Tornado/0023.png" id="24_cxlqp"]
[ext_resource type="Texture2D" uid="uid://b7vvawcncdxqd" path="res://Assets/Images/Effects/RobortSkill/Tornado/0024.png" id="25_pxlak"]
[ext_resource type="Texture2D" uid="uid://5bwbxjyi3t7w" path="res://Assets/Images/Effects/RobortSkill/Tornado/0025.png" id="26_yiqfc"]
[ext_resource type="Texture2D" uid="uid://b6w6x5ucjsf1b" path="res://Assets/Images/Effects/RobortSkill/Tornado/0026.png" id="27_jxj8g"]
[ext_resource type="Texture2D" uid="uid://dktuofepv62gi" path="res://Assets/Images/Effects/RobortSkill/Tornado/0027.png" id="28_bjo4o"]
[ext_resource type="Texture2D" uid="uid://cfq3on78kofi" path="res://Assets/Images/Effects/RobortSkill/Tornado/0028.png" id="29_1yfef"]
[ext_resource type="Texture2D" uid="uid://bxvvohmbxkaov" path="res://Assets/Images/Effects/RobortSkill/Tornado/0029.png" id="30_aq5mi"]
[ext_resource type="Texture2D" uid="uid://1a5kja1o74cn" path="res://Assets/Images/Effects/RobortSkill/Tornado/0030.png" id="31_ixgsu"]
[ext_resource type="Texture2D" uid="uid://biq5vvcl7awbb" path="res://Assets/Images/Effects/RobortSkill/Tornado/0031.png" id="32_k1pxo"]
[ext_resource type="Texture2D" uid="uid://b00g3iemjsrg2" path="res://Assets/Images/Effects/RobortSkill/Tornado/0032.png" id="33_52knv"]
[ext_resource type="Texture2D" uid="uid://dvyqk0kr1yr2o" path="res://Assets/Images/Effects/RobortSkill/Tornado/0033.png" id="34_1jkgn"]
[ext_resource type="Texture2D" uid="uid://cw0fvtwxeaog1" path="res://Assets/Images/Effects/RobortSkill/Tornado/0034.png" id="35_voea4"]
[ext_resource type="Texture2D" uid="uid://b4axa0vfm6riy" path="res://Assets/Images/Effects/RobortSkill/Tornado/0035.png" id="36_sj8ge"]
[ext_resource type="Texture2D" uid="uid://c8g81lyg14ath" path="res://Assets/Images/Effects/RobortSkill/Tornado/0036.png" id="37_vidog"]
[ext_resource type="Texture2D" uid="uid://behme3jwq4i6k" path="res://Assets/Images/Effects/RobortSkill/Tornado/0037.png" id="38_s6055"]
[ext_resource type="Texture2D" uid="uid://b3f1tmxckabkr" path="res://Assets/Images/Effects/RobortSkill/Tornado/0038.png" id="39_o2sgm"]
[ext_resource type="Texture2D" uid="uid://c6q2c6u4sefha" path="res://Assets/Images/Effects/RobortSkill/Tornado/0039.png" id="40_q4xb4"]
[ext_resource type="Texture2D" uid="uid://b6hsmeebiua8p" path="res://Assets/Images/Effects/RobortSkill/Tornado/0040.png" id="41_hm8v1"]
[ext_resource type="Texture2D" uid="uid://pr6fbosboaky" path="res://Assets/Images/Effects/RobortSkill/Tornado/0041.png" id="42_3tnty"]
[ext_resource type="Texture2D" uid="uid://bfay3drwurdv3" path="res://Assets/Images/Effects/RobortSkill/Tornado/0042.png" id="43_jib2m"]
[ext_resource type="Texture2D" uid="uid://ct1mnktkrx0pc" path="res://Assets/Images/Effects/RobortSkill/Tornado/0043.png" id="44_dwqkl"]
[ext_resource type="Texture2D" uid="uid://cknrvjq12teqf" path="res://Assets/Images/Effects/RobortSkill/Tornado/0044.png" id="45_3pa8k"]
[ext_resource type="Texture2D" uid="uid://dq3vtb7y8bqoc" path="res://Assets/Images/Effects/RobortSkill/Tornado/0045.png" id="46_hy5vc"]
[ext_resource type="Texture2D" uid="uid://c1fxcga4o3nsc" path="res://Assets/Images/Effects/RobortSkill/Tornado/0046.png" id="47_6u1i3"]
[ext_resource type="Texture2D" uid="uid://4usct5pm0rux" path="res://Assets/Images/Effects/RobortSkill/Tornado/0047.png" id="48_628tn"]
[ext_resource type="Texture2D" uid="uid://b6ubmfhpf3vj5" path="res://Assets/Images/Effects/RobortSkill/Tornado/0048.png" id="49_c100g"]
[ext_resource type="Texture2D" uid="uid://blor8nchxnnwd" path="res://Assets/Images/Effects/RobortSkill/Tornado/0049.png" id="50_gsr1g"]
[ext_resource type="Texture2D" uid="uid://ddkn1ly4arqja" path="res://Assets/Images/Effects/RobortSkill/Tornado/0050.png" id="51_7cd3v"]
[ext_resource type="Texture2D" uid="uid://ckmarmvy0k0ct" path="res://Assets/Images/Effects/RobortSkill/Tornado/0051.png" id="52_w215e"]
[ext_resource type="Texture2D" uid="uid://btk5163eme6kw" path="res://Assets/Images/Effects/RobortSkill/Tornado/0052.png" id="53_mx0en"]
[ext_resource type="Texture2D" uid="uid://bc0yfu4wagc7x" path="res://Assets/Images/Effects/RobortSkill/Tornado/0053.png" id="54_qccib"]
[ext_resource type="Texture2D" uid="uid://c4q3w556uok0" path="res://Assets/Images/Effects/RobortSkill/Tornado/0054.png" id="55_y3pwd"]
[ext_resource type="Texture2D" uid="uid://dj54ho4wum5ed" path="res://Assets/Images/Effects/RobortSkill/Tornado/0055.png" id="56_lglra"]
[ext_resource type="Texture2D" uid="uid://cooiugppiog1a" path="res://Assets/Images/Effects/RobortSkill/Tornado/0056.png" id="57_x1868"]
[ext_resource type="Texture2D" uid="uid://cp38q1s3yxki" path="res://Assets/Images/Effects/RobortSkill/Tornado/0057.png" id="58_ym8sb"]
[ext_resource type="Texture2D" uid="uid://cl0c1wtjolpb2" path="res://Assets/Images/Effects/RobortSkill/Tornado/0058.png" id="59_i8evp"]
[ext_resource type="Texture2D" uid="uid://ddn6svppol5ci" path="res://Assets/Images/Effects/RobortSkill/Tornado/0059.png" id="60_icjgn"]
[ext_resource type="Texture2D" uid="uid://bi6iw17m1364l" path="res://Assets/Images/Effects/RobortSkill/Tornado/0060.png" id="61_eces4"]
[ext_resource type="Texture2D" uid="uid://b7nfrqlw8kwxy" path="res://Assets/Images/Effects/RobortSkill/Tornado/0061.png" id="62_ytpth"]
[ext_resource type="Texture2D" uid="uid://dxmv6udprfdul" path="res://Assets/Images/Effects/RobortSkill/Tornado/0062.png" id="63_wqatv"]
[ext_resource type="Texture2D" uid="uid://cua5vyn0y5a61" path="res://Assets/Images/Effects/RobortSkill/Tornado/0063.png" id="64_jg788"]
[ext_resource type="AudioStream" uid="uid://besn3oxllomin" path="res://Assets/Sounds/FXs/Heroes/Robort/tornado.mp3" id="65_ypvpk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8mxni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vwta4")
}, {
"duration": 1.0,
"texture": ExtResource("3_o2vda")
}, {
"duration": 1.0,
"texture": ExtResource("4_locg5")
}, {
"duration": 1.0,
"texture": ExtResource("5_2v87n")
}, {
"duration": 1.0,
"texture": ExtResource("6_v7bci")
}, {
"duration": 1.0,
"texture": ExtResource("7_3dpce")
}, {
"duration": 1.0,
"texture": ExtResource("8_lc1tx")
}, {
"duration": 1.0,
"texture": ExtResource("9_wslrt")
}, {
"duration": 1.0,
"texture": ExtResource("10_ajlnv")
}, {
"duration": 1.0,
"texture": ExtResource("11_u2lkh")
}, {
"duration": 1.0,
"texture": ExtResource("12_yfnum")
}, {
"duration": 1.0,
"texture": ExtResource("13_7wxit")
}, {
"duration": 1.0,
"texture": ExtResource("14_x6byj")
}, {
"duration": 1.0,
"texture": ExtResource("15_1y2xs")
}, {
"duration": 1.0,
"texture": ExtResource("16_yvx28")
}, {
"duration": 1.0,
"texture": ExtResource("17_oy4pr")
}, {
"duration": 1.0,
"texture": ExtResource("18_msjbd")
}, {
"duration": 1.0,
"texture": ExtResource("19_8q1r8")
}, {
"duration": 1.0,
"texture": ExtResource("20_2xd4f")
}, {
"duration": 1.0,
"texture": ExtResource("21_hpygb")
}, {
"duration": 1.0,
"texture": ExtResource("22_8xciy")
}, {
"duration": 1.0,
"texture": ExtResource("23_2tnfj")
}, {
"duration": 1.0,
"texture": ExtResource("24_cxlqp")
}, {
"duration": 1.0,
"texture": ExtResource("25_pxlak")
}, {
"duration": 1.0,
"texture": ExtResource("26_yiqfc")
}, {
"duration": 1.0,
"texture": ExtResource("27_jxj8g")
}, {
"duration": 1.0,
"texture": ExtResource("28_bjo4o")
}, {
"duration": 1.0,
"texture": ExtResource("29_1yfef")
}, {
"duration": 1.0,
"texture": ExtResource("30_aq5mi")
}, {
"duration": 1.0,
"texture": ExtResource("31_ixgsu")
}, {
"duration": 1.0,
"texture": ExtResource("32_k1pxo")
}, {
"duration": 1.0,
"texture": ExtResource("33_52knv")
}, {
"duration": 1.0,
"texture": ExtResource("34_1jkgn")
}, {
"duration": 1.0,
"texture": ExtResource("35_voea4")
}, {
"duration": 1.0,
"texture": ExtResource("36_sj8ge")
}, {
"duration": 1.0,
"texture": ExtResource("37_vidog")
}, {
"duration": 1.0,
"texture": ExtResource("38_s6055")
}, {
"duration": 1.0,
"texture": ExtResource("39_o2sgm")
}, {
"duration": 1.0,
"texture": ExtResource("40_q4xb4")
}, {
"duration": 1.0,
"texture": ExtResource("41_hm8v1")
}, {
"duration": 1.0,
"texture": ExtResource("42_3tnty")
}, {
"duration": 1.0,
"texture": ExtResource("43_jib2m")
}, {
"duration": 1.0,
"texture": ExtResource("44_dwqkl")
}, {
"duration": 1.0,
"texture": ExtResource("45_3pa8k")
}, {
"duration": 1.0,
"texture": ExtResource("46_hy5vc")
}, {
"duration": 1.0,
"texture": ExtResource("47_6u1i3")
}, {
"duration": 1.0,
"texture": ExtResource("48_628tn")
}, {
"duration": 1.0,
"texture": ExtResource("49_c100g")
}, {
"duration": 1.0,
"texture": ExtResource("50_gsr1g")
}, {
"duration": 1.0,
"texture": ExtResource("51_7cd3v")
}, {
"duration": 1.0,
"texture": ExtResource("52_w215e")
}, {
"duration": 1.0,
"texture": ExtResource("53_mx0en")
}, {
"duration": 1.0,
"texture": ExtResource("54_qccib")
}, {
"duration": 1.0,
"texture": ExtResource("55_y3pwd")
}, {
"duration": 1.0,
"texture": ExtResource("56_lglra")
}, {
"duration": 1.0,
"texture": ExtResource("57_x1868")
}, {
"duration": 1.0,
"texture": ExtResource("58_ym8sb")
}, {
"duration": 1.0,
"texture": ExtResource("59_i8evp")
}, {
"duration": 1.0,
"texture": ExtResource("60_icjgn")
}, {
"duration": 1.0,
"texture": ExtResource("61_eces4")
}, {
"duration": 1.0,
"texture": ExtResource("62_ytpth")
}, {
"duration": 1.0,
"texture": ExtResource("63_wqatv")
}, {
"duration": 1.0,
"texture": ExtResource("64_jg788")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ulann"]
radius = 45.0906

[node name="RobortTornadoArea" type="Area2D"]
collision_layer = 0
collision_mask = 32
monitoring = false
script = ExtResource("1_qbtbr")
move_speed = 80.0

[node name="TornadoSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.555121, 0.555121)
sprite_frames = SubResource("SpriteFrames_8mxni")
autoplay = "default"
frame_progress = 0.679607
offset = Vector2(0, -81)

[node name="DuringTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_ulann")

[node name="TornadoAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("65_ypvpk")
autoplay = true
bus = &"Sound"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DuringTimer" to="." method="_on_during_timer_timeout"]
